# lora_back

./: .env  Cargo.toml  README.md  nginx_howto  sample curl  ubuntu_service_how_to
.sqlx/: query-053bd4d82bda0b86717280a91f40bd53ffff9adb98b56f0d884ccdbc0cbec8eb.json  query-0c41814502e36c929a61f17eddebeda89c106a21f8222716947b6b220a0fe67a.json  query-114be4f00355cdb5525a5a4a8a8220730f34b1bcad085fe874da0d2e819db308.json  query-1f7dafec603aa25acad29c83b4a640dc81ae252431332260c06c5b0b588303de.json  query-2b1e27fa51a5cb5d5340a1ec712e4b7240d3350796f77aa9f3491588afdbc41d.json  query-2f88f6e1e5710f93cdc8a8411ae673a4f8d01616058c9496803faf4c572e0cf2.json  query-46b9f320fb5cfbbb7fa98f5ebdc80ef2011bdc3def7870ca515479a0ab2cb104.json  query-4fb08d68fb653c7c42ca75902de3b4165b6f13759759e1b0798e1c578e3851ee.json  query-5ecd4ef8abe72037d0bc16128ec3eb947c5fd933c4f0fe97749b305cf2c2595a.json  query-9b8e75a515a71a4a1f570dd84a8a3f5cb4fca70c1c636d8f5b4bb376760f9abc.json  query-b101231702fc29e7464c4076393ec0bfb2547bff8864b19e77c160f7e4ca0793.json  query-beec63427b996c9c022ec58fcb1cf5c0288b1b513531663708e52e09e552fa9d.json  query-c01985d02d23694271896cf456f8a6e4cbba275cba125f7f12e56795cbfce84e.json  query-c3ea44c2ab5336707092365cf720387bd3bda137efcae8a2e05941204878c8f5.json  query-da9457990eb7fc417b6dc28e1278cc6a6a6567f550c98d72c4a3ac85979bae74.json
migrations/: 20250000100001_sensors.sql  20250326130000_tt.sql  20250327093643_lora_data.sql  20250327121901_alter_table_sensor_data.sql
src/: .env  error.rs  lib.rs  main.rs
src/db/: lora.rs  mod.rs  sensor.rs
src/models/: device.rs  gateway.rs  (+3 more)
(+2 files in other folders)
