[package]
name = "union_back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
hex = "0.4.3"
hyper = { version = "1.6.0", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "derive", "postgres", "runtime-tokio-native-tls", "time", "uuid"] }
time = "0.3.39"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
trace = "0.1.7"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
